tests/baselines/reference/asiPublicPrivateProtected.errors.txt
asiPublicPrivateProtected.ts(1,1): error TS2304: Cannot find name 'public'.
asiPublicPrivateProtected.ts(12,1): error TS2304: Cannot find name 'private'.
asiPublicPrivateProtected.ts(23,1): error TS2304: Cannot find name 'protected'.


==== asiPublicPrivateProtected.ts (3 errors) ====
    public
    ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    class NonPublicClass {
        public s() {
        }
    }
    
    class NonPublicClass2 {
        public
        private nonPublicFunction() {
        }
    }
    private
    ~~~~~~~
!!! error TS2304: Cannot find name 'private'.
    class NonPrivateClass {
        private s() {
        }
    }
    
    class NonPrivateClass2 {
        private
        public nonPrivateFunction() {
        }
    }
    protected
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'protected'.
    class NonProtectedClass {
      protected s() {
      }
    }
    
    class NonProtectedClass2 {
        protected
        public nonProtectedFunction() {
        }
    }
    
    class ClassWithThreeMembers {
        public
        private
        protected
    }
    